Test resources modified

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CoinsScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CoinsScraperUnitURLTest2.bib
@@ -1,11 +1,10 @@
-@article{agarwal2011sentiment,
-title = {Sentiment analysis of twitter data},
-author = {Agarwal, Apoorv and Xie, Boyi and Vovsha, Ilia and Passonneau, Rebecca},
+@article{richards2011active,
+title = {Active Learning to Overcome Sample Selection Bias: Application to Photometric Variable Star Classification},
+author = {Richards, Joseph W. and Starr, Dan L. and Brink, Henrik and Miller, Adam A. and Bloom, Joshua S. and Butler, Nathaniel R. and James, J. Berian and Long, James P. and Rice, John},
 year = {2011},
-number = {June},
-pages = {30-38},
-issn = {15327655},
-isbn = {9781932432961}
+pages = {43},
+issn = {0004-637X},
+isbn = {0004-637X}
 
-,url = {http://www.mendeley.com/research/sentiment-analysis-twitter-data}
+,url = {http://www.mendeley.com/research/active-learning-overcome-sample-selection-bias-application-photometric-variable-star-classification/}
 }
