--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/HematologyLibraryScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/HematologyLibraryScraperUnitURLTest.bib
@@ -1,13 +1,13 @@
-@article{Lämmermann04062009,
-  abstract = {Mature dendritic cells (DCs) moving from the skin to the lymph node are a prototypic example of rapidly migrating amoeboid leukocytes. Interstitial DC migration is directionally guided by chemokines, but independent of specific adhesive interactions with the tissue as well as pericellular proteolysis. Instead, the protrusive flow of the actin cytoskeleton directly drives a basal mode of locomotion that is occasionally supported by actomyosin contractions at the trailing edge to propel the cell's rigid nucleus. We here delete the small GTPase Cdc42 in DCs and find that actin flow and actomyosin contraction are still initiated in response to chemotactic cues. Accordingly, the cells are able to polarize and form protrusions. However, in the absence of Cdc42 the protrusions are temporally and spatially dysregulated, which leads to impaired leading edge coordination. Although this defect still allows the cells to move on 2-dimensional surfaces, their in vivo motility is completely abrogated. We show that this difference is entirely caused by the geometric complexity of the environment, as multiple competing protrusions lead to instantaneous entanglement within 3-dimensional extracellular matrix scaffolds. This demonstrates that the decisive factor for migrating DCs is not specific interaction with the extracellular environment, but adequate coordination of cytoskeletal flow.},
-  author = {Lämmermann, Tim and Renkawitz, Jörg and Wu, Xunwei and Hirsch, Karin and Brakebusch, Cord and Sixt, Michael},
-  doi = {10.1182/blood-2008-11-191882},
-  eprint = {http://bloodjournal.hematologylibrary.org/content/113/23/5703.full.pdf+html},
-  journal = {Blood},
-  number = 23,
-  pages = {5703-5710},
-  title = {Cdc42-dependent leading edge coordination is essential for interstitial dendritic cell migration},
-  url = {http://bloodjournal.hematologylibrary.org/content/113/23/5703.abstract},
-  volume = 113,
-  year = 2009
+@article{Camaschella06122013,
+  abstract = {To avoid iron deficiency and overload, iron availability is tightly regulated at both the cellular and systemic levels. The liver peptide hepcidin controls iron flux to plasma from enterocytes and macrophages through degradation of the cellular iron exporter ferroportin. The hepcidin-ferroportin axis is essential to maintaining iron homeostasis. Genetic inactivation of proteins of the hepcidin-activating pathway causes iron overload of varying severity in human and mice. Hepcidin insufficiency and increased iron absorption are also characteristic of anemia due to ineffective erythropoiesis in which, despite high total body iron, hepcidin is suppressed by the high erythropoietic activity, worsening both iron overload and anemia in a vicious cycle. Hepcidin excess resulting from genetic inactivation of a hepcidin inhibitor, the transmembrane protease serine 6 (TMPRSS6) leads to a form of iron deficiency refractory to oral iron. Increased hepcidin explains the iron sequestration and iron-restricted erythropoiesis of anemia associated with chronic inflammatory diseases. In mice, deletion of TMPRSS6 in vivo has profound effects on the iron phenotype of hemochromatosis and beta-thalassemia. Hepcidin manipulation to restrict iron is a successful strategy to improve erythropoiesis in thalassemia, as shown clearly in preclinical studies targeting TMPRSS6; attempts to control anemia of chronic diseases by antagonizing the hepcidin effect are ongoing. Finally, the metabolic pathways identified from iron disorders are now being explored in other human pathologic conditions, including cancer.},
+  author = {Camaschella, Clara},
+  doi = {10.1182/asheducation-2013.1.1},
+  eprint = {http://asheducationbook.hematologylibrary.org/content/2013/1/1.full.pdf+html},
+  journal = {ASH Education Program Book},
+  number = 1,
+  pages = {1-8},
+  title = {Iron and hepcidin: a story of recycling and balance},
+  url = {http://asheducationbook.hematologylibrary.org/content/2013/1/1.abstract},
+  volume = 2013,
+  year = 2013
 }
