--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IngentaconnectScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IngentaconnectScraperUnitURLTest2.bib
@@ -1,12 +1,12 @@
-@article{Stockport:2010-05-20T00:00:00:1741-878X:27,
-	title = "Google: organising the worlds' information",
-	journal = "International Journal of Technology Marketing",
-	volume = "5",
-	number = "1",
-	year = "2010-05-20T00:00:00",
-	abstract = "The case study documents the history and growth of Google from its start up to early 2009. A number of important strategic events over its history are considered within the case study such as: its founders Larry Page and Sergey Brin, the struggling early internet search companies, forming a strategic partnership with Yahoo, building a better business model, its reaction to 911, and entering China. The case study seeks to address a number of strategy questions such as: How does Google formulate and implement strategy? How did Google's business model evolve? How does Google make ethical strategic decisions within its quest to organise the world's information?",
-	pages = "27-43",
-	url = "http://www.ingentaconnect.com/content/ind/ijtmkt/2010/00000005/00000001/art00004",
-	doi = "10.1504/IJTMKT.2010.033294",
-	keyword = "MANAGEMENT JOURNALS, Operational Management, Marketing and Services, Policy and Organisational Management, Technology Management",
-author = "Stockport, Gary J."}
+@article{Zampetakis:2007-04-17T00:00:00:0262-1711:370,
+title = "Creativity development in engineering education: the case of mind mapping",
+journal = "The Journal of Management Development",
+volume = "26",
+number = "4",
+year = "2007-04-17T00:00:00",
+abstract = "Purpose  The purpose of this paper is to exploit student preference and propose, discuss and experimentally validate a strategy that aims to reduce time necessary to introduce tutoring of mind mapping to engineering students. Design/methodology/approach  A survey instrument was designed and used to collect student preferences about mind mapping. Preferences were linked to alternative scenarios of mind mapping deployment. Survey responses from a 100 second-year students from the Department of Production Engineering and Management were analyzed using conjoint analysis. Findings  Results indicate that an effective strategy to present mind mapping to engineering students is to explain in detail all the possible applications of mind mapping; present mind maps with different colours using both words and drawings and encourage students to use mind maps in team assignments. Originality/value  The findings of this paper provide a well documented framework in addressing mind mapping technique to engineering students. The proposed framework tries to make the best use of the available time for creativity development programs, in engineering departments. This framework may also be applied to other creativity enhancing techniques, providing solutions for incorporating creativity in engineering curricula.",
+pages = "370-380",
+url = "http://www.ingentaconnect.com/content/mcb/026/2007/00000026/00000004/art00005",
+doi = "10.1108/02621710710740110",
+keyword = "Education, Greece, Mind maps, Production engineering, Students",
+author = "Zampetakis, Leonidas A. and Tsironis, Loukas and Moustakis, Vassilis"}
