--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JAPScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JAPScraperUnitURLTest.bib
@@ -1,13 +1,12 @@
-@article{Moulton01042011,
-  abstract = {Airway remodeling in patients with chronic asthma is characterized by a thickening of the airway walls. It has been demonstrated in previous theoretical models that this change in thickness can have an important mechanical effect on the properties of the wall, in particular on the phenomenon of mucosal folding induced by smooth muscle contraction. In this paper, we present a model for mucosal folding of the airway in the context of growth. The airway is modeled as a bilayered cylindrical tube, with both geometric and material nonlinearities accounted for via the theory of finite elasticity. Growth is incorporated into the model through the theory of morphoelasticity. We explore a range of growth possibilities, allowing for anisotropic growth as well as different growth rates in each layer. Such nonuniform growth, referred to as differential growth, can change the properties of the material beyond geometrical changes through the generation of residual stresses. We demonstrate that differential growth can have a dramatic impact on mucosal folding, in particular on the critical pressure needed to induce folding, the buckling pattern, as well as airway narrowing. We conclude that growth may be an important component in airway remodeling.},
-  author = {Moulton, D. E. and Goriely, A.},
-  doi = {10.1152/japplphysiol.00991.2010},
-  eprint = {http://jap.physiology.org/content/110/4/1003.full.pdf+html},
-  journal = {Journal of Applied Physiology},
-  number = 4,
-  pages = {1003-1012},
-  title = {Possible role of differential growth in airway wall remodeling in asthma},
-  url = {http://jap.physiology.org/content/110/4/1003.abstract},
-  volume = 110,
-  year = 2011
+@article{moulton2011possible,
+abstract = {D. E. Moulton and A. GorielyOCCAM, Institute of Mathematics, University of Oxford, Oxford, United KingdomAddress for reprint requests and other correspondence: D. E. Moulton, OCCAM, Institute of Mathematics, Univ. of Oxford, Oxford, UK (e-mail: moulton{at}maths.ox.ac.uk).Submitted 24 August 2010.accepted in final form 15 January 2011.Abstract Airway remodeling in patients with chronic asthma is characterized by a thickening of the airway walls. It has been demonstrated in previous theoretical models that this change in thickness can have an important mechanical effect on the properties of the wall, in particular on the phenomenon of mucosal folding induced by smooth muscle contraction. In this paper, we present a model for mucosal folding of the airway in the context of growth. The airway is modeled as a bilayered cylindrical tube, with both geometric and material nonlinearities accounted for via the theory of finite elasticity. Growth is incorporated into the model through the theory of morphoelasticity. We explore a range of growth possibilities, allowing for anisotropic growth as well as different growth rates in each layer. Such nonuniform growth, referred to as differential growth, can change the properties of the material beyond geometrical changes through the generation of residual stresses. We demonstrate that differential growth can have a dramatic impact on mucosal folding, in particular on the critical pressure needed to induce folding, the buckling pattern, as well as airway narrowing. We conclude that growth may be an important component in airway remodeling. mucosal foldingchronic asthmagrowthelasticityinstabilityCopyright © 2011 the American Physiological Society},
+author = {Moulton, D. E. and Goriely, A.},
+journal = {Journal of Applied Physiology},
+month = {apr},
+number = {4},
+pages = {1003--1012},
+title = {Possible role of differential growth in airway wall remodeling in asthma},
+url = {http://jap.physiology.org/content/110/4/1003.abstract},
+volume = {110},
+year = {2011}
 }
