--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MorganClaypoolScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MorganClaypoolScraperUnitURLTest1.bib
@@ -13,8 +13,15 @@ pages = {1-136},
 year = {2011},
 doi = {10.2200/S00334ED1V01Y201102WBE001},
 
-URL = {http://www.morganclaypool.com/doi/abs/10.2200/S00334ED1V01Y201102WBE001},
-eprint = {http://www.morganclaypool.com/doi/pdf/10.2200/S00334ED1V01Y201102WBE001}
+URL = { 
+        http://dx.doi.org/10.2200/S00334ED1V01Y201102WBE001
+    
+},
+eprint = { 
+        http://dx.doi.org/10.2200/S00334ED1V01Y201102WBE001
+    
+}
+
 }
 
 
