--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest1.bib
@@ -1,9 +1,13 @@
-@book {altman2006,
-    language = {ger},
-    author = {Altmann, J{\"u}rgen},
-    title = {Abschlusspodium "Nanotechnologie zwischen Nutzen und Risiken"},
-    location = {[Karlsruhe]},
-    publisher = {Universit{\"a}tsbibliothek},
-    year = {2006}
-,url = {http://www.ubka.uni-karlsruhe.de/hylib-bin/suche.cgi?opacdb=UBKA_OPAC&nd=256943346&session=1147556008&use_cookie_session=1&returnTo=http%3A%2F%2Fwww.ubka.uni-karlsruhe.de%2Fhylib%2Fka_opac.html}
+﻿@misc{SWB-256943346,
+	address={[Karlsruhe]},
+	bestand={Karlsruher Institut für Technologie (KIT) - KIT-Bibliothek ;},
+	editor={Schneider, Martin and Altmann, Jürgen and Hullmann, Angela and Nordmann, Alfred and Tovar, Günter and Wedlich, Doris and Robertson-von Trotha, Caroline Y. [Hrsg.]},
+	institution={Zentrum für Angewandte Kulturwissenschaft und Studium Generale},
+	note={Vortrag},
+	publisher={Universitätsbibliothek},
+	size={Online-Ressource (01:24:14 Std.)},
+	title={Colloquium Fundamentale SS 2006 Nanotechnologie - Die unsichtbare Revolution des 21. Jahrhunderts},
+	volume={2006.07.20: Abschlusspodium Nanotechnologie zwischen Nutzen und Risiken : [20. Juli 2006, Universität Karlsruhe, Zentrum für Angewandte Kulturwissenschaft und Studium Generale]},
+	year=2006
+,url = {http://primo.bibliothek.kit.edu/primo_library/libweb/action/display.do?tabs=detailsTab&ct=display&fn=search&doc=KITSRC256943346&indx=1&recIds=KITSRC256943346&recIdxs=0&elementId=0&renderMode=poppedOut&displayMode=full&frbrVersion=&dscnt=1&scp.scps=scope%3A%28%22KIT%22%29&amp;frbg=&tab=kit&vl%2836718850UI0%29=any&dstmp=1415546537258&srt=date&mode=Basic&dum=true&tb=t&vl%281UIStartWith0%29=contains&vl%28freeText0%29=Abschlusspodium%20%22Nanotechnologie%20zwischen%20Nutzen%20und%20Risiken&vid=KIT&vl%2836718849UI1%29=all_items}
 }
