--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -79,7 +79,8 @@ history.restore.confirm		= Do you really want to restore the selected fields?
 history.selection.help		= Select a revision and see the differences to this revision.
 history.restoreBtn.disabled = restore button is only enabled when you are comparing a revision to the current post.
 history.restoreBtn.enabled	= restore to this version
-history.historyList.header	= The following revisions are available for this post: 
+history.historyList.header	= The following revisions are available for this post:
+history.historySelect.compareTo	= Compare to 
 
 
 
