unused files related to history page deleted

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -124,6 +124,7 @@ bibtex.actions.openurl                       = OpenURL
 bibtex.actions.openurl.inactive              = add an openURL resolver to your profile (settings)
 bibtex.actions.openurl.title                 = query your OpenURL server with the metadata of this publication
 bibtex.actions.pick.inactive                 = sign in to add or remove posts from your clipboard
+bibtex.actions.posthistory.title			 = view history of this post
 # BibTex actions
 bibtex.actions.pick.title                    = add this publication to your clipboard
 bibtex.actions.private_document.delete       = delete
@@ -187,6 +188,7 @@ bookmark.actions.copy.inactive       = Sign in to copy this bookmark into your c
 bookmark.actions.copy.title          = copy this bookmark to your repository
 bookmark.actions.delete.inactive     = You can only delete bookmarks from your own collection.
 bookmark.actions.delete.title        = delete this bookmark from your repository
+bookmark.actions.posthistory.title	 = view history of this post
 # bookmark
 bookmark.actions.edit.title          = edit this bookmark
 bookmark.actions.heading             = actions for all displayed bookmarks:
