made "Issues" link in footer more clear by renaming it to "Report Issues"

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -838,7 +838,7 @@ inboxPage.about = When other users tag one of their posts with "send:{0}", it wi
 
 insert = insert
 
-issues = Issues
+issues = Report Issues
 
 joinGroup = join group
 
