1. restore option for version 0 is added. 2. borders are corrected. 3. vertical alignments are corrected.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -810,7 +810,9 @@ history.selection.help		= Select a revision and see the differences to this revi
 history.restoreBtn.disabled = restore button is only enabled when you are comparing a revision to the current post.
 history.restoreBtn.enabled	= restore to this version
 history.historyList.header	= The following revisions are available for this post:
-history.historySelect.compareTo	= Compare to 
+history.historySelect.compareTo	= Compare to
+history.currentVersion		= This version is identical to the latest(current) version.
+history.firstVersion		= This is the first version and has no previous version.  
 
 
 
