--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISBNScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISBNScraperUnitURLTest1.bib
@@ -1,4 +1,4 @@
-﻿@book{noauthororeditor1991magischen,
+@book{noauthororeditor1991magischen,
 address = {Bergisch Gladbach},
 isbn = {3404201620 9783404201624 3404201604 9783404201600},
 publisher = {Bastei Lübbe},
