AmazonScraper test resources are modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest8.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest8.bib
@@ -1,9 +1,9 @@
-﻿@book{noauthororeditor2008unternehmenspraxis,
+@book{noauthororeditor2008unternehmenspraxis,
 address = {München},
 isbn = {9783486585797 3486585797},
 publisher = {Oldenbourg},
 refid = {239563960},
 title = {Web 2.0 in der Unternehmenspraxis : Grundlagen, Fallstudien und Trends zum Einsatz von Social Software},
-url = {http://www.amazon.de/Web-2-0-Unternehmenspraxis-Grundlagen-Fallstudien/dp/3486585797/ref=pd_bbs_sr_1?ie=UTF8&s=books&qid=1214381841&sr=8-1},
+url = {http://www.amazon.de/Web-2-0-Unternehmenspraxis-Grundlagen-Fallstudien/dp/3486585797/ref=pd_bbs_sr_1?ie=UTF8&amp;s=books&amp;qid=1214381841&amp;sr=8-1},
 year = {2008}
 }
