--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest10.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest10.bib
@@ -1,4 +1,4 @@
-﻿@book{noauthororeditor2009sebastian,
+@book{noauthororeditor2009sebastian,
 address = {Hamburg},
 isbn = {9783941378285 3941378287},
 publisher = {Edel Germany GmbH},
