--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest2.bib
@@ -3,11 +3,10 @@ author = {Keith Rennolls},
 title = {Visualization and Bayesian Nets to link Business Aims},
 journal ={2012 23rd International Workshop on Database and Expert Systems Applications},
 volume = {0},
-year = {2006},
 issn = {1529-4188},
+year = {2006},
 pages = {603-607},
-doi = {10.1109/DEXA.2006.148},
+doi = {http://doi.ieeecomputersociety.org/10.1109/DEXA.2006.148},
 publisher = {IEEE Computer Society},
-address = {Los Alamitos, CA, USA}
-,url = {http://www.computer.org/portal/web/csdl/doi/10.1109/DEXA.2006.148}
+address = {Los Alamitos, CA, USA},
 }
