WorldCatScraper test resource is modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/WorldCatScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/WorldCatScraperUnitURLTest3.bib
@@ -1,6 +1,5 @@
-@book{schott2004schotts,
+@book{noauthororeditor2004schotts,
 address = {Berlin},
-author = {Schott, Ben},
 isbn = {3827005469 9783827005465},
 publisher = {Bloomsbury},
 refid = {163641505},
