ProlaScraper test resources are modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest4.bib
@@ -1,11 +1,11 @@
 @article{PhysRev.149.674,
   title = {Theory of the Third-Order Elastic Constants of Diamond-Like Crystals},
-  author = {Keating, P. N.},
+  author = {Keating, P.},
   journal = {Phys. Rev.},
   volume = {149},
   issue = {2},
   pages = {674--678},
-  numpages = {0},
+  numpages = {5},
   year = {1966},
   month = {Sep},
   publisher = {American Physical Society},
