--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest5.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest5.bib
@@ -1,6 +1,6 @@
 @article{PhysRevE.64.016131,
   title = {Scientific collaboration networks.  I. Network construction and fundamental results},
-  author = {Newman, M. E. J.},
+  author = {Newman, M.},
   journal = {Phys. Rev. E},
   volume = {64},
   issue = {1},
