--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest3.bib
@@ -1,11 +1,11 @@
 @article{PhysRevB.47.558,
-  title = {Ab initio},
+  title = {\textit{Ab initio}       molecular dynamics for liquid metals},
   author = {Kresse, G. and Hafner, J.},
   journal = {Phys. Rev. B},
   volume = {47},
   issue = {1},
   pages = {558--561},
-  numpages = {0},
+  numpages = {4},
   year = {1993},
   month = {Jan},
   publisher = {American Physical Society},
