AipScitationScraper is modified and remove jsessionid from url. AipScitationScraper test resources are modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest3.bib
@@ -1,4 +1,4 @@
-﻿@article{:/content/asa/journal/jasa/42/5/10.1121/1.2144160,
+@article{:/content/asa/journal/jasa/42/5/10.1121/1.2144160,
    author = "Magnuski, H. S. and Sessler, G. M. and West, J. E.",
    title = "On Line Analysis of Subjective Preference Data",
    journal = "The Journal of the Acoustical Society of America",
