--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest1.bib
@@ -1,4 +1,4 @@
-﻿@article{:/content/aip/journal/jcp/136/3/10.1063/1.3680558,
+@article{:/content/aip/journal/jcp/136/3/10.1063/1.3680558,
    author = "Schiff, Jeremy and Poirier, Bill",
    title = "Communication: Quantum mechanics without wavefunctions",
    journal = "The Journal of Chemical Physics",
