WorldScientificScraper and AandAScraper test resources are modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/WorldScientificScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/WorldScientificScraperUnitURLTest.bib
@@ -6,7 +6,7 @@
 @article{doi:10.1142/S0219622006002271,
 author = {CHEN, ZHENGXIN},
 title = {FROM DATA MINING TO BEHAVIOR MINING},
-journal = {International Journal of Information Technology &amp; Decision Making},
+journal = {International Journal of Information Technology & Decision Making},
 volume = {05},
 number = {04},
 pages = {703-711},
