Test resources are modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest1.bib
@@ -1,13 +1,12 @@
-﻿@misc{SWB-256943346,
-	address={[Karlsruhe]},
-	bestand={Karlsruher Institut für Technologie (KIT) - KIT-Bibliothek ;},
-	editor={Schneider, Martin and Altmann, Jürgen and Hullmann, Angela and Nordmann, Alfred and Tovar, Günter and Wedlich, Doris and Robertson-von Trotha, Caroline Y. [Hrsg.]},
-	institution={Zentrum für Angewandte Kulturwissenschaft und Studium Generale},
-	note={Vortrag},
-	publisher={Universitätsbibliothek},
-	size={Online-Ressource (01:24:14 Std.)},
-	title={Colloquium Fundamentale SS 2006 Nanotechnologie - Die unsichtbare Revolution des 21. Jahrhunderts},
-	volume={2006.07.20: Abschlusspodium Nanotechnologie zwischen Nutzen und Risiken : [20. Juli 2006, Universität Karlsruhe, Zentrum für Angewandte Kulturwissenschaft und Studium Generale]},
-	year=2006
-,url = {http://primo.bibliothek.kit.edu/primo_library/libweb/action/display.do?tabs=detailsTab&ct=display&fn=search&doc=KITSRC256943346&indx=1&recIds=KITSRC256943346&recIdxs=0&elementId=0&renderMode=poppedOut&displayMode=full&frbrVersion=&dscnt=1&scp.scps=scope%3A%28%22KIT%22%29&amp;frbg=&tab=kit&vl%2836718850UI0%29=any&dstmp=1415546537258&srt=date&mode=Basic&dum=true&tb=t&vl%281UIStartWith0%29=contains&vl%28freeText0%29=Abschlusspodium%20%22Nanotechnologie%20zwischen%20Nutzen%20und%20Risiken&vid=KIT&vl%2836718849UI1%29=all_items}
+@book{SWB-087550059,
+	address={München},
+	author={Witten, Ian H. and Frank, Eibe},
+	bestand={Universitätsbibliothek Freiburg  [Signatur: NA 2001/80];Universität Freiburg, Institut für Medizinische Biometrie und  [Signatur: Frei 140: WIT/11516/Inf];Saarländische Universitäts- und Landesbibliothek  [Signatur: 2002-5960];Universität des Saarlandes, ;Universität des Saarlandes,  [Signatur: CSC ARTI 5593];Sächsische Landesbibliothek - Staats- und Universitätsbibliothek  [Signatur: 2001 8 033655];Universität Konstanz, Kommunikations-, Informations-, Medienzentrum (KIM) ;Universität Mannheim, Universitätsbibliothek ;Universitätsbibliothek Leipzig ;Universitätsbibliothek Heidelberg  [Signatur: LN-U10-12308];Karlsruher Institut für Technologie (KIT) - KIT-Bibliothek  [Signatur: 2001 A 423];Karlsruher Institut für Technologie (KIT), KIT-Bibliothek Nord  [Signatur: M Wit 20];Universitätsbibliothek Stuttgart  [Signatur: 5H 1071];Badische Landesbibliothek  [Signatur: 105 A 689];TU Bergakademie Freiberg, Universitätsbibliothek  [Signatur: 01.7921  8.];Hochschule Mittweida, Hochschulbibliothek ;Hochschule Zittau/Görlitz - Hochschulbibliothek ;Hochschulbibliothek Heilbronn  [Signatur: 621.846 WIT];Hochschulbibliothek Heilbronn, Standort Künzelsau  [Signatur: 621.846 WIT];Hochschule für Technik, Wirtschaft und Kultur Leipzig ;Hochschulbibliothek Konstanz -  [Signatur: wck43/173];Hochschule für Technik und Wirtschaft  [Signatur: ST 300-02 0444 01];Hochschule Mannheim, Hochschulbibliothek  [Signatur: E IV 11500];Hochschule Furtwangen, Hochschule für Technik und Wirtschaft ;Stadtbibliothek Chemnitz ;Duale Hochschule Baden-Württemberg Stuttgart  [Signatur: THd 51];Hochschule Albstadt-Sigmaringen, Bibliothek Albstadt  [Signatur: InWi 83];Hochschule Aalen  [Signatur: 46 Wit];Duale Hochschule Baden-Württemberg Mannheim ;Hochschule Ulm, Hochschule für Technik  [Signatur: 423 Wit];Berufsakademie Sachsen, Staatliche Studienakademie Dresden ;Duale Hochschule Baden-Württemberg Ravensburg  [Signatur: IWb 5];Duale Hochschule Baden-Württemberg Lörrach,  [Signatur: ST 270];Duale Hochschule Baden-Württemberg Heidenheim ;Fraunhofer-Institut für Arbeitswirtschaft und Organisation (IAO)  [Signatur: 65.012.4:681.3(002) WIT];Duale Hochschule Baden-Württemberg Ravensburg,  [Signatur: IPa 13];},
+	isbn={3-446-21533-6},
+	keywords={ ; Data Mining},
+	publisher={Hanser},
+	size={XIX, 386 S. : graph. Darst.},
+	title={Data Mining : praktische Werkzeuge und Techniken für das maschinelle Lernen},
+	url={http://bvbr.bib-bvb.de:8991/F?func=service&doc_library=BVB01&doc_number=009222713&line_number=0001&func_code=DB_RECORDS&service_type=MEDIA},
+	year=2001,
 }
