--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/RSOCScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/RSOCScraperUnitURLTest1.bib
@@ -1,13 +1,16 @@
-@article{15011999,
-  abstract = {This paper reviews the measurements of galaxy correlations at high redshifts, and discusses how these may be understood in models of hierarchical gravitational collapse. The clustering of galaxies at redshift 1 is much weaker than at present, and this is consistent with the rate of growth of structure expected in an open universe. If Ω = 1, this observation would imply that bias increases at high redshift, in conflict with observed M/L values for known high–z clusters. At redshift 3, the population of Lyman–limit galaxies displays clustering that is of similar amplitude to that seen today. This is most naturally understood if the Lyman–limit population is a set of rare recently formed objects. Knowing both the clustering and the abundance of these objects it is possible to deduce, empirically, the fluctuation spectrum required on scales which cannot be measured today owing to gravitational nonlinearities. Of existing physical models for the fluctuation spectrum, the results are most closely matched by a low–density spatially flat universe. This conclusion is reinforced by an empirical analysis of CMB anisotropies, in which the present–day fluctuation spectrum is forced to have the observed form. Open models are strongly disfavoured, leaving ΛCDM as the most successful simple model for structure formation.},
-  doi = {10.1098/rsta.1999.0319},
-  eprint = {http://rsta.royalsocietypublishing.org/content/357/1750/133.full.pdf+html},
-  journal = {Philosophical Transactions of the Royal Society of London. Series A:
-				Mathematical, Physical and Engineering Sciences},
-  number = 1750,
-  pages = {133-152},
-  title = {The evolution of clustering and bias in the galaxy distribution},
-  url = {http://rsta.royalsocietypublishing.org/content/357/1750/133.abstract},
-  volume = 357,
-  year = 1999
+@article {nokey,
+	editor = {,},
+	title = {The evolution of clustering and bias in the galaxy distribution},
+	volume = {357},
+	number = {1750},
+	pages = {133--152},
+	year = {1999},
+	doi = {10.1098/rsta.1999.0319},
+	publisher = {The Royal Society},
+	abstract = {J. A. PeacockInstitute for Astronomy, Royal Observatory, Edinburgh EH9 3HJ, UKAbstract
+				This paper reviews the measurements of galaxy correlations at high redshifts, and discusses how these may be understood in models of hierarchical gravitational collapse. The clustering of galaxies at redshift 1 is much weaker than at present, and this is consistent with the rate of growth of structure expected in an open universe. If Ω = 1, this observation would imply that bias increases at high redshift, in conflict with observed M/L values for known high{\textendash}z clusters. At redshift 3, the population of Lyman{\textendash}limit galaxies displays clustering that is of similar amplitude to that seen today. This is most naturally understood if the Lyman{\textendash}limit population is a set of rare recently formed objects. Knowing both the clustering and the abundance of these objects it is possible to deduce, empirically, the fluctuation spectrum required on scales which cannot be measured today owing to gravitational nonlinearities. Of existing physical models for the fluctuation spectrum, the results are most closely matched by a low{\textendash}density spatially flat universe. This conclusion is reinforced by an empirical analysis of CMB anisotropies, in which the present{\textendash}day fluctuation spectrum is forced to have the observed form. Open models are strongly disfavoured, leaving ΛCDM as the most successful simple model for structure formation.
+			galaxy clusteringcorrelation functionsgalaxy formationmicrowave backgroundhigh{\textendash}redshift galaxies},
+	isbn = {1471-2962},
+	issn = {1364-503X},
+	journal = {Philosophical Transactions of the Royal Society of London A: Mathematical, Physical and Engineering Sciences}
 }
