--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/RSOCScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/RSOCScraperUnitURLTest2.bib
@@ -1,13 +1,16 @@
-@article{Hagenaars07022000,
-  abstract = {An unresolved issue in the epidemiology of bovine spongiform encephalopathy (BSE) in the UK is what precisely determines the degree to which cases of disease in cattle are clustered within herds throughout the course of the epidemic. This paper presents an analysis of feed–borne transmission at the herd level and tests various models of case–clustering mechanisms, associated with heterogeneity in exposure to infectious feed, against observed epidemic pattern. We use an age–structured metapopulation framework in which the recycling of animal tissue between herds via feed producers is explicitly described. We explore two alternative assumptions for the scaling with herd size of the within–herd risk of exposure of an animal to infectious material. We find that whereas exposure heterogeneity caused by variation in feed and offal processing methods and by variation in per–animal feed uptake can explain the pattern of case clustering seen in the BSE epidemic, exposure heterogeneity due to the aggregation of infectivity within feed cannot.},
-  author = {Hagenaars, T.J. and Ferguson, N.M. and Donnelly, C.A. and Ghani, A.C. and Anderson, R.M.},
-  doi = {10.1098/rspb.2000.0989},
-  eprint = {http://rspb.royalsocietypublishing.org/content/267/1440/205.full.pdf+html},
-  journal = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
-  number = 1440,
-  pages = {205-215},
-  title = {Feed-borne transmission and case clustering of BSE},
-  url = {http://rspb.royalsocietypublishing.org/content/267/1440/205.abstract},
-  volume = 267,
-  year = 2000
+@article {nokey,
+	author = {Hagenaars, T.J. and Ferguson, N.M. and Donnelly, C.A. and Ghani, A.C. and Anderson, R.M.},
+	title = {Feed-borne transmission and case clustering of BSE},
+	volume = {267},
+	number = {1440},
+	pages = {205--215},
+	year = {2000},
+	doi = {10.1098/rspb.2000.0989},
+	publisher = {The Royal Society},
+	abstract = {T.J. Hagenaars*, N.M. Ferguson, C.A. Donnelly, A.C. Ghani and R.M. AndersonThe Wellcome Trust Centre for the Epidemiology of Infectious Disease, Department of Zoology, University of Oxford, South Parks Road, Oxford OX1 3FY, UK*Author for correspondence (thomas.hagenaars{at}ceid.ox.ac.uk).Abstract
+				An unresolved issue in the epidemiology of bovine spongiform encephalopathy (BSE) in the UK is what precisely determines the degree to which cases of disease in cattle are clustered within herds throughout the course of the epidemic. This paper presents an analysis of feed{\textendash}borne transmission at the herd level and tests various models of case{\textendash}clustering mechanisms, associated with heterogeneity in exposure to infectious feed, against observed epidemic pattern. We use an age{\textendash}structured metapopulation framework in which the recycling of animal tissue between herds via feed producers is explicitly described. We explore two alternative assumptions for the scaling with herd size of the within{\textendash}herd risk of exposure of an animal to infectious material. We find that whereas exposure heterogeneity caused by variation in feed and offal processing methods and by variation in per{\textendash}animal feed uptake can explain the pattern of case clustering seen in the BSE epidemic, exposure heterogeneity due to the aggregation of infectivity within feed cannot.
+			BSEtransmission dynamicsclusteringepidemiologymathematical model},
+	isbn = {1471-2954},
+	issn = {0962-8452},
+	journal = {Proceedings of the Royal Society of London B: Biological Sciences}
 }
