--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest9.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest9.bib
@@ -1,6 +1,5 @@
-@electronic{ricci2011recommender,
+@electronic{noauthororeditor2011recommender,
 address = {New York; London},
-author = {Ricci, Francesco},
 isbn = {9780387858197 0387858199 9780387858203 0387858202},
 publisher = {Springer},
 refid = {682910825},
