--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest2.bib
@@ -1,9 +1,14 @@
-@book {altman2006,
-    language = {ger},
-    author = {Altmann, J{\"u}rgen},
-    title = {Abschlusspodium "Nanotechnologie zwischen Nutzen und Risiken"},
-    location = {[Karlsruhe]},
-    publisher = {Universit{\"a}tsbibliothek},
-    year = {2006}
-,url = {http://www.ubka.uni-karlsruhe.de/hylib-bin/suche.cgi?opacdb=UBKA_OPAC&session=1147556008&use_cookie_session=1&returnTo=http%3A%2F%2Fwww.ubka.uni-karlsruhe.de%2Fhylib%2Fka_opac.html&nd=256943346&printMAB=256943346&bibtex=1}
+@book{SWB-349648727,
+	address={Amsterdam},
+	author={Han, Jiawei and Kamber, Micheline and Pei, Jian},
+	bestand={Universitätsbibliothek Freiburg  [Signatur: NA 2011/239];Hochschule für Technik und Wirtschaft des Saarlandes,  [Signatur: 7.8.9. Han [2]];Universität des Saarlandes, Wirtschaftswiss. Seminarbibliothek,  [Signatur: BF-1-586:3 / Controlling];Hochschule für Technik und Wirtschaft des Saarlandes  [Signatur: Sonderstandort Labor Kommunikationstechnik];Universitätsbibliothek Leipzig ;Universität Heidelberg, Bibliothek der Fakultät für Mathematik  [Signatur: Han];KIT, Campus Süd, Wirtschaftswissenschaftliche ;Karlsruher Institut für Technologie (KIT) - KIT-Bibliothek  [Signatur: 2001 A 2208(3)];Hochschulbibliothek Reutlingen  [Signatur: I 3-400-316/3];Hochschulbibliothek Heilbronn, Standort Künzelsau  [Signatur: 621.846 HAN];Hochschule für Technik Stuttgart  [Signatur: ID 016];Hochschule Offenburg  [Signatur: ST 530 008 2012];Max-Planck-Institut für Informatik ;},
+	edition={3rd ed.},
+	isbn={978-0-12-381479-1; 0-12-381479-0},
+	keywords={ ; Data mining ; Data Mining},
+	publisher={Elsevier, Morgan Kaufmann},
+	series={The Morgan Kaufmann series in data mangement systems},
+	size={XXXV, 703 S. : Ill., graph. Darst.},
+	title={Data mining : concepts and techniques},
+	url={http://www.gbv.de/dms/bowker/toc/9780123748560.pdf},
+	year={c 2012},
 }
