--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -753,6 +753,9 @@ goldStandard.resource.info.pdfps        = documents attached to this post
 goldStandard.resource.info.referencedBy = publications that reference this post
 goldStandard.resource.info.references   = publications referenced by this post
 goldStandard.users                      = users having this post in their collection
+goldStandard.edit.approval				= post approval
+goldStandard.edit.approveMsg			= I approve this post
+goldStandard.edit.approveMsg.help		= Approving this post means this post has reached the standard quality.
 
 goldstandard.resource.info.noAbstract = No abstract has been added to this post.
 goldstandard.resource.info.noLinks    = No links have been added to this post.
