All actions done via ajax

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -88,7 +88,6 @@ batchedit.yourTags               = Your tags
 
 bibtex.abstract                              = abstract
 bibtex.abstract.cap                          = Abstract
-bibtex.actions                               = 
 bibtex.actions.additionalFiles               = add a document
 bibtex.actions.additional_url.add            = add URL
 bibtex.actions.additional_url.add.title      = add another additional URL
@@ -275,7 +274,6 @@ cv.defaultlayout           = template layouts
 cv.description             = You can change the way your cv page looks in the following menu.
 cv.editCV                  = edit template
 cv.editSettings            = edit personal settings
-cv.error.common            = 
 cv.error.common.noData     = No data entered for {0}.
 cv.error.common.notVisible = The tag {0} is not visible to you.
 cv.error.common.stacktrace = {0} has caused an error: {1} with stacktrace {2}
@@ -845,7 +843,6 @@ login.lostPassword            = lost password
 login.lostPassword_1          = I've lost my password.
 login.lostPassword_2          = Please send me a new one.
 login.method                  = Login method
-login.method.httpbasic        = 
 login.method.internal         = Local
 login.method.ldap             = LDAP
 login.method.openid           = OpenID
@@ -1065,7 +1062,6 @@ oauth.authorization.success        = You successfully authorized the application
 oauth.button.delete                = Delete
 oauth.description                  = Here you see all consumers which get an OAuth authorisation by you to your {0} Account. These OAuth-consumers have access to all of your posts in {1}.
 oauth.noToken                      = No OAuth Consumers are authorized for your account.
-oauth.table                        = 
 oauth.table.expirationTime         = expires on
 oauth.table.issueTime              = granted access on
 oauth.table.title                  = Application
@@ -1100,6 +1096,9 @@ person.new.newPersonButton             = New person
 person.new.personPanelHeader           = About this person
 person.new.postPanelHeader             = Selected post
 person.new.subHeader                   = for post
+person.show.Moth                       = Other
+person.show.Mrev                       = Reviewer
+person.show.Mths                       = Advisor
 person.show.academicDegree             = Academic degree
 person.show.addAlternateNameButton     = Add alternative name
 person.show.addNameButton              = Add name
@@ -1125,6 +1124,8 @@ person.show.modalDeleteRoleHeader      = Remove person role from thesis
 person.show.modalEditRoleHeader        = Edit roles of person
 person.show.modalLinkPersonContent     = You really want to link this person with your user account?
 person.show.modalLinkPersonHeader      = Link person to user
+person.show.modalUnlinkPersonContent   = Do you really want to unlink your user account from this person?
+person.show.modalUnlinkPersonHeader    = Remove link between person and user
 person.show.newThesisButton            = New thesis
 person.show.noNamesFound               = No names found
 person.show.noResourcesFound           = No resources found
@@ -1142,6 +1143,7 @@ person.show.rolePubTab                 = Supervisor / Advisor / Reviewer / Other
 person.show.saveButton                 = Save
 person.show.supervisor                 = Supervisor
 person.show.thatsMeButton              = That's me
+person.show.thatsNotMeButton           = That's not me
 person.show.thesis                     = Thesis
 
 personalize = personalize
@@ -1334,7 +1336,6 @@ post.resource.editor                                    = editor(s)
 post.resource.editor.help                               = Each editor on a separate line, format "Firstname Lastname". Only necessary, if no author is given.
 post.resource.entrytype                                 = entry type
 post.resource.entrytype.article.description             = An article from a scientific journal
-##post.resource.entrytype.book                            = 
 post.resource.entrytype.book.description                = A book where a publisher is given
 post.resource.entrytype.booklet.description             = A printed and bound work where no publisher or financing institution is given
 post.resource.entrytype.conference                      = conference*
@@ -1357,7 +1358,6 @@ post.resource.entrytype.preamble                        = preamble*
 post.resource.entrytype.preamble.description            = An introductory statement
 post.resource.entrytype.presentation                    = presentation*
 post.resource.entrytype.presentation.description        = A talk at an event
-##post.resource.entrytype.proceedings                     = 
 post.resource.entrytype.proceedings.description         = A collection of papers published at a conference
 post.resource.entrytype.standard                        = standard*
 post.resource.entrytype.standard.description            = A technical standard (e.g., ISO/IETF)
@@ -1766,7 +1766,6 @@ settings.jabRef.explain                          = For an explanation on how to 
 settings.jabRef.item                             = item.layout
 settings.jabRef.item.help                        = used to render each publication item
 settings.jabRef.layoutfile                       = JabRef layout file
-settings.layout                                  = 
 settings.layout.help.bootstrap                   = {0}: The new layout offers a more intuitive handling (beta).
 settings.layout.help.classic                     = {0}: Use this for the old BibSonomy 2 layout.
 settings.layout.mainhelp                         = Choose the layout of the user interface
@@ -2021,7 +2020,7 @@ time.about_x_seconds = about {0} seconds
 time.an_hour         = an hour
 time.and             = and
 time.postfix         = \ ago
-time.prefix          = 
+time.prefix          = before
 time.x_days          = {0} days
 time.x_hours         = {0} hours
 time.x_minutes       = {0} minutes
