--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -54,8 +54,6 @@ basket.infoActions      = Beispielsweise k\u00F6nnen Sie schnell und einfach
 basket.removeAll        = Ablage leeren
 basket.removeAllVerbose = Alle Publikationen aus der Ablage entfernen
 
-batchedit = 
-
 batchedit.button.update          = Absenden
 batchedit.deleteSelected         = Eintr\u00E4ge l\u00F6schen
 batchedit.deleteSelected.confirm = Wollen Sie wirklich alle ausgew\u00E4hlten Eintr\u00E4ge l\u00F6schen?
@@ -77,7 +75,6 @@ batchedit.yourTags               = Ihre Tags
 
 bibtex.abstract                              = Zusammenfassung
 bibtex.abstract.cap                          = Zusammenfassung
-bibtex.actions                               = 
 bibtex.actions.additionalFiles               = ein Dokument hinzuf\u00FCgen
 bibtex.actions.additional_url.add            = URL hinzuf\u00FCgen
 bibtex.actions.additional_url.add.title      = eine weitere zus\u00E4tzliche URL hinzuf\u00FCgen
@@ -234,8 +231,6 @@ captcha = Captcha
 
 change = &auml;ndern
 
-citation.style.plain = 
-
 close = schlie\u00DFen
 
 concept.sidebar.title       = St\u00F6bern
@@ -264,7 +259,6 @@ cv.default_wiki            = \ <!-- Dies ist unser Standardlayout, bei Bedarf k\
 cv.defaultlayout           = Beispiellayouts
 cv.editCV                  = Vorlage bearbeiten
 cv.editSettings            = Pers\u00F6nliche Daten editieren
-cv.error.common            = 
 cv.error.common.noData     = Keine Daten f&uuml;r {0}.
 cv.error.common.notVisible = Das Tag {0} ist f&uuml;r sie leider nicht sichtbar.
 cv.error.common.stacktrace = {0} hat einen Fehler verursacht: {1} mit stacktrace {2}
@@ -578,7 +572,6 @@ error.url.exists_not                        = Die angegebene URL existiert nicht
 error.url.format                            = Die URL ist falsch formatiert. M\u00F6glicherweise fehlt das Protokoll.
 error.url.general                           = Etwas ist falsch an der URL.
 error.url_no_hash                           = Diese Seite existiert leider nicht auf unserem Server. Um auf eine Seite mit URL-Eintr\u00E4gen zuzugreifen, verwenden Sie bitte das URL-Schema /url/HASH.
-error.user                                  = 
 error.user.no_valid_username                = Bitte geben Sie einen g\u00FCltigen Benutzernamen ein.
 error.user.none_existing_user               = Der Benutzer mit dem Namen {0} existiert nicht in unserem System.
 error.user.relation.update                  = Fehler beim Bearbeiten der Benutzer-Relation.
@@ -802,7 +795,6 @@ less = weniger
 limited_account.activation.activate             = Aktivieren
 limited_account.activation.activitionConditions = Mir ist bekannt, dass ich nach der Aktivierung Publikationslisten \u00F6ffentlich schalten kann und diese von anderen Personen eingesehen werden k\u00F6nnen. Private Eintr\u00E4ge sind weiterhin m\u00F6glich und bleiben unsichtbar f\u00FCr andere Personen.
 limited_account.activation.error.checkbox       = Bitte aktivieren Sie die Kontrollbox um die nebenstehenden Bedingungen zu akzeptieren.
-limited_account.activation.naviActivate         = 
 limited_account.activation.text.left            = <h3 class="textPage"> Willkommen bei PUMA!</h3>\n<div class="niceText">\n\u0009<p>\n\u0009\u0009PUMA ist Ihr pers\u00F6nliches Publikationsmanagementsystem. Es erlaubt das zentrale anwendungs\u00FCbergreifende Speichern Ihrer Literaturlisten. Diese k\u00F6nnen in einer Vielzahl von Formaten f\u00FCr Publikationen, Lebensl\u00E4ufe und Homepages automatisch exportiert werden.\n\u0009</p>\n\u0009<p>\n\u0009\u0009Mit der Nutzung der Merkliste im Rechercheportal Ihrer Bibliothek erstellen Sie bereits Publikationseintr\u00E4ge in PUMA und das ganz automatisch.\n\u0009</p>\n\u0009<p>\n\u0009\u0009Um nun die vollen Vorteile von PUMA nutzen zu k\u00F6nnen, ben\u00F6tigen wir Ihre Zustimmung, die Sie mit dem untenstehenden Formular geben k\u00F6nnen. Entdecken Sie den kompletten Funktionsumfang, wie das Teilen von Literaturlisten mit Ihren Kollegen und Freunden. Oder exportieren Sie Ihre Literaturrecherche in einer riesigen Auswahl an Formaten. <br/>\n\u0009\u0009Nach dem Sie das Formular abgesendet haben, k\u00F6nnen Sie sofort alle Funktionen von PUMA nutzen. \n\u0009</p>\n\u0009<p style="margin-bottom: 2em;">\n\u0009\u0009Wir w\u00FCnschen Ihnen viel Spa\u00DF und Erfolg!\n\u0009</p>\n</div>
 limited_account.activation.text.right           = <h4 class="textPage">Die PUMA Vorteile im \u00DCberblick:</h4>\n<div class="niceText">\n\u0009<ul class="text">\n\u0009\u0009<li>Online-Literaturverwaltung ohne Installation einer Software</li>\n\u0009\u0009<li>schnelles Bibliografieren per Mausklick oder ISBN-Eingabe</li>\n\u0009\u0009<li>einfaches Einbinden der Publikationsliste in die eigene Homepage</li>\n\u0009\u0009<li>Weiterleitung der Publikation an das institutionelle Repositorium, dadurch entf\u00E4llt eine erneute Erfassung</li>\n\u0009\u0009<li>Weiterleitung der Publikation an das Forschunginformationssystem (FIS) der Universit\u00E4t</li>\n\u0009\u0009<li>umfangreiche, intuitive Unterst\u00FCtzung bei der Erfassung von Publikationen</li>\n\u0009\u0009<li>Literaturlisten f\u00FCr die eigenen Publikationen erstellen</li>\n\u0009\u0009<li>einfache Erfassung, Verwaltung und Abruf von Web-Lesezeichen</li>\n\u0009\u0009<li>eLearning: Literaturlisten f\u00FCr Lehrveranstaltungen oder Arbeitsgruppen per Stichwort Nutzern zur Verf\u00FCgung stellen</li>\n\u0009</ul>\n</div>
 limited_account.activation.user_not_limited     = Ihr Zugang ist bereits aktiv.
@@ -829,7 +821,6 @@ login.lostPassword            = Passwort vergessen
 login.lostPassword_1          = Ich habe mein Passwort vergessen.
 login.lostPassword_2          = Bitte senden Sie mir ein neues Passwort.
 login.method                  = Anmeldemethode
-login.method.httpbasic        = 
 login.method.internal         = Lokal
 login.method.ldap             = LDAP
 login.method.openid           = OpenID
@@ -1048,7 +1039,6 @@ oauth.authorization.success        = "{0}" darf nun auf Ihre Daten in {1} zugrei
 oauth.button.delete                = L\u00F6schen
 oauth.description                  = Hier sind alle OAuth-consumer aufgelistet, die eine Autorisierung auf Ihren {0} Account von Ihnen bekommen haben. Diese OAuth-consumer haben Zugriff auf alle Posts die Sie get\u00E4tigt haben.
 oauth.noToken                      = Ihr Account ist derzeit f\u00FCr keinen OAuth-Consumer freigegeben.
-oauth.table                        = 
 oauth.table.expirationTime         = Besteht bis
 oauth.table.issueTime              = Zugriff erlaubt am
 oauth.table.title                  = Anwendung
@@ -1083,6 +1073,9 @@ person.new.newPersonButton             = Neue Person
 person.new.personPanelHeader           = \u00DCber diese Person
 person.new.postPanelHeader             = Ausgew\u00E4hlter Post
 person.new.subHeader                   = f\u00FCr Publikation
+person.show.Moth                       = Andere
+person.show.Mrev                       = Gutachter
+person.show.Mths                       = Betreuer
 person.show.academicDegree             = Akademischer Grad
 person.show.addAlternateNameButton     = Alternativen Namen hinzuf\u00FCgen
 person.show.addNameButton              = Name hinzuf\u00FCgen
@@ -1108,6 +1101,8 @@ person.show.modalDeleteRoleHeader      = Personenrolle der Abschlussarbeit entfe
 person.show.modalEditRoleHeader        = Rollen der Person bearbeiten
 person.show.modalLinkPersonContent     = Wollen Sie Ihren Benutzer-Account mit dieser Person verkn\u00FCpfen?
 person.show.modalLinkPersonHeader      = Person mit Nutzer verkn\u00FCpfen
+person.show.modalUnlinkPersonContent   = Wollen Sie die Verkn\u00FCpfung zwischen Ihrem Benutzeraccount und dieser Person aufl\u00F6sen?
+person.show.modalUnlinkPersonHeader    = Verkn\u00FCpfung zwischen Benutzer und Person aufheben
 person.show.newThesisButton            = Neue Abschlussarbeit
 person.show.noNamesFound               = Keine Namen gefunden
 person.show.noResourcesFound           = Keine Resourcen gefunden
@@ -1125,6 +1120,7 @@ person.show.rolePubTab                 = Doktorvater/-mutter / Betreuer / Gutach
 person.show.saveButton                 = Speichern
 person.show.supervisor                 = Doktorvater
 person.show.thatsMeButton              = Das bin ich 
+person.show.thatsNotMeButton           = Das bin ich nicht
 person.show.thesis                     = Abschlussarbeit
 
 personalize = personalisieren
@@ -1315,35 +1311,10 @@ post.resource.editor                                    = Herausgeber
 post.resource.editor.help                               = Die Namen der Herausgeber im Format "Vorname Nachname" - ein Herausgeber pro Zeile. Nur notwendig, wenn kein Autor angegeben ist.
 post.resource.entrytype                                 = Eintragstyp
 post.resource.entrytype.article.description             = Ein Artikel aus einem wissenschaftlichen Journal
-post.resource.entrytype.book                            = 
 post.resource.entrytype.book.description                = Ein Buch das einen Herausgeber hat
 post.resource.entrytype.booklet.description             = Ein gedrucktes und gebundenes Werk bei dem kein Herausgeber oder eine finanzierede Institution vorgegeben ist
-post.resource.entrytype.conference                      = 
-post.resource.entrytype.conference.description          = 
-post.resource.entrytype.electronic                      = 
 post.resource.entrytype.electronic.description          = Eine digitale Publikation (z.B. ein Beitrag auf einem Blog)
 post.resource.entrytype.help                            = Die Art der Ver\u00F6ffentlichung (nicht-Standardtypen sind mit einem Stern markiert):\n<dl>\n<dt>article</dt>\n<dd>Ein Artikel aus einer Zeitschrift oder einem wissenschaftlichen Journal</dd>\n<dt>book</dt>\n<dd>Ein Buch, in dem ein Verlag angegeben ist</dd>\n<dt>booklet</dt>\n<dd>Ein gedrucktes und gebundenes Werk bei dem kein Verlag bzw. keine finanzierende Institution angegeben ist</dd>\n<dt>conference*</dt>\n<dd>Ein Beitrag zu einer Konferenz, der nicht in einem Konferenzband erschienen ist</dd>\n<dt>electronic*</dt>\n<dd>Eine elektronische Ver\u00F6ffentlichung (z.B. ein Blogeintrag)</dd>\n<dt>inbook</dt>\n<dd>Ein Teil eines Buches (z.B. ein Kapitel oder ein Seitenbereich)</dd>\n<dt>incollection</dt>\n<dd>Ein Teil eines Buches mit eigenem Titel</dd>\n<dt>inproceedings</dt>\n<dd>Ein Beitrag in einem Konferenzband</dd>\n<dt>manual</dt>\n<dd>Eine technische Dokumentation</dd>\n<dt>mastersthesis</dt>\n<dd>Eine Bachelor-, Master-, oder Diplomarbeit (eine genauere Angabe ist mittels des Feldes "Typ" m\u00F6glich)</dd>\n<dt>misc</dt>\n<dd>Diesen Eintragstyp k\u00F6nnen Sie verwenden, wenn kein anderer Typ passt.</dd>\n<dt>patent*</dt>\n<dd>Ein Patent</dd>\n<dt>periodical*</dt>\n<dd>Ein regelm\u00E4\u00DFig erscheinendes Werk (z.B. eine Zeitung)</dd>\n<dt>phdthesis</dt>\n<dd>Eine Dissertation/Doktorarbeit</dd>\n<dt>preamble*</dt>\n<dd>Eine (meist feierliche) Erkl\u00E4rung am Anfang eines Dokuments (z.B. einer Urkunde)</dd>\n<dt>presentation*</dt>\n<dd>Ein Vortrag auf einer Veranstaltung</dd>\n<dt>proceedings</dt>\n<dd>Ein Konferenzband</dd>\n<dt>standard*</dt>\n<dd>Ein technischer Standard (z.B. ISO/DIN)</dd>\n<dt>techreport</dt>\n<dd>Ein von einer Hochschule oder anderen Institution (z.B. Forschungszentrum) ver\u00F6ffentlichter Bericht; typischerweise eine numerierte Ausgabe in einer Reihe</dd>\n<dt>unpublished</dt>\n<dd>Ein Werk mit Autor und Titel, welches aber nicht ver\u00F6ffentlicht wurde</dd>\n</dl>
-post.resource.entrytype.inbook.description              = 
-post.resource.entrytype.incollection.description        = 
-post.resource.entrytype.inproceedings.description       = 
-post.resource.entrytype.manual.description              = 
-post.resource.entrytype.masterthesis.description        = 
-post.resource.entrytype.misc.description                = 
-post.resource.entrytype.patent                          = 
-post.resource.entrytype.patent.description              = 
-post.resource.entrytype.periodical                      = 
-post.resource.entrytype.periodical.description          = 
-post.resource.entrytype.phdthesis.description           = 
-post.resource.entrytype.preamble                        = 
-post.resource.entrytype.preamble.description            = 
-post.resource.entrytype.presentation                    = 
-post.resource.entrytype.presentation.description        = 
-##post.resource.entrytype.proceedings                     = 
-post.resource.entrytype.proceedings.description         = 
-post.resource.entrytype.standard                        = 
-post.resource.entrytype.standard.description            = 
-post.resource.entrytype.techreport.description          = 
-post.resource.entrytype.unpublished.description         = 
 post.resource.fields.comments                           = Kommentare und Notizen
 post.resource.fields.detailed                           = Erweiterte Informationen
 post.resource.fields.detailed.show.all                  = alle Felder anzeigen
@@ -1747,7 +1718,6 @@ settings.jabRef.explain                          = F\u00FCr weiterf\u00FChrende 
 settings.jabRef.item                             = item.layout
 settings.jabRef.item.help                        = Wird ben\u00F6tigt, um jede Publikation zu \u00FCbersetzen
 settings.jabRef.layoutfile                       = JabRef Layout-Datei
-settings.layout                                  = 
 settings.layout.help.bootstrap                   = {0}: Das neue Layout l\u00E4sst sich einfacher und intuitiver bedienen (beta).
 settings.layout.help.classic                     = {0}: Nutzen Sie diese Option f\u00FCr das alte BibSonomy 2 layout.
 settings.layout.mainhelp                         = W\u00E4hlen Sie das Layout der Benutzeroberfl\u00E4che
@@ -1927,7 +1897,6 @@ synchronization.synchronize                          = jetzt synchronisieren
 
 system.about                             = Mit {0} lassen sich einfach und komfortabel Lesezeichen und Publikationen online verwalten und teilen. \n\nWarum nicht einfach mitmachen und interessante Webseiten und Publikationen <a href="/help_de/Publikationen%20und%20Lesezeichen%20speichern">sammeln</a>, <a href="/help_de/Meine%20Sammlung%20verwalten">verwalten</a> und <a href="/help_de/Kategorie%20Soziale%20Interaktion">teilen</a>?
 system.about.bs                          = <h2>Der einfache Weg zum Verwalten wissenschaftlicher Publikationen und Lesezeichen</h2>\n\n<p>{0} hilft Ihnen beim Verwalten Ihrer Publikationen und Lesezeichen, bei der Zusammenarbeit mit Kollegen und beim Finden neuer interessanter Sachen f\u00FCr Ihre Forschung.</p>
-system.about.bs.headline                 = 
 system.about.bs.learnmore                = erfahren Sie mehr
 system.about.bs.register                 = kostenlos registrieren
 system.contact                           = Kontakt:
@@ -2001,7 +1970,6 @@ time.about_a_second  = einer Sekunde
 time.about_x_seconds = {0} Sekunden
 time.an_hour         = einer Stunde
 time.and             = und
-time.postfix         = 
 time.prefix          = vor 
 time.x_days          = {0} Tagen
 time.x_hours         = {0} Stunden
