Fixed URL-Encoding of Disambiguation page; Completed Disambiguation Controller

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -346,20 +346,25 @@ didyouknow = Wussten Sie schon...
 didyouknow.browserButtons  = Unsere Browser Addons helfen Ihnen beim Sammeln von Lesezeichen und Publikationen. <a href="/buttons">Erfahren Sie mehr.</a>
 didyouknow.editYourProfile = Es ist einfacher f\u00FCr Ihre Kollegen Sie zu finden, wenn Sie ihr Profil ausgef\u00FCllt haben. Au\u00DFerdem wirkt Ihre eigenen Eintr\u00F6ge seri\u00F6ser, wenn ein vollst\u00E4ndiges Profil damit verlinkt ist. <a href="/settings">Mein Profil editieren.</a>
 
-disambiguation.addPersonButton           = Person hinzuf\u00FCgen
-disambiguation.close                     = Schlie\u00DFen
-disambiguation.header                    = Disambiguierung
-disambiguation.modalNewPersonCloseButton = Schlie\u00DFen
-disambiguation.modalNewPersonContent     = Diese Action wird Sie zu einer neuen Seite weiterleiten, wo Sie eine neue Person mit dem aktuellen Namen voreingetragen anlegen k\u00F6nnen.
-disambiguation.modalNewPersonHeader      = Neue Person zur Abschlussarbeit hinzuf\u00FCgen
-disambiguation.modalSearchPersonHeader   = Andere Person zur Abschlussarbeit hinzuf\u00FCgen
-disambiguation.newPersonButton           = Neue Person
-disambiguation.noFound                   = Keine Personen zu dem Authornamen gefunden
-disambiguation.otherPersonButton         = Andere Person
-disambiguation.person                    = Person
-disambiguation.personsPanelHeader        = Personen mit dem Namen
-disambiguation.postPanelHeader           = Betreffenden Post
-disambiguation.searchPersonButton        = Nach anderen Namen suchen
+disambiguation.addPersonButton            = Person hinzuf\u00FCgen
+disambiguation.close                      = Schlie\u00DFen
+disambiguation.header                     = Disambiguierung
+disambiguation.linkJustShowPerson         = Nur Person anzeigen
+disambiguation.linkPersonButton           = Person hinzuf\u00FCgen
+disambiguation.modalLinkPersonCloseButton = Abbrechen
+disambiguation.modalLinkPersonContent     = Wollen Sie den folgenden Personennamen mit dieser Publikation assoziieren?
+disambiguation.modalLinkPersonHeader      = Personennamen-Assoziation
+disambiguation.modalNewPersonCloseButton  = Schlie\u00DFen
+disambiguation.modalNewPersonContent      = Diese Action wird Sie zu einer neuen Seite weiterleiten, wo Sie eine neue Person mit dem aktuellen Namen voreingetragen anlegen k\u00F6nnen.
+disambiguation.modalNewPersonHeader       = Neue Person zur Abschlussarbeit hinzuf\u00FCgen
+disambiguation.modalSearchPersonHeader    = Andere Person zur Abschlussarbeit hinzuf\u00FCgen
+disambiguation.newPersonButton            = Neue Person
+disambiguation.noFound                    = Keine Personen zu dem Authornamen gefunden
+disambiguation.otherPersonButton          = Andere Person
+disambiguation.person                     = Person
+disambiguation.personsPanelHeader         = Personen mit dem Namen
+disambiguation.postPanelHeader            = Betreffenden Post
+disambiguation.searchPersonButton         = Nach anderen Namen suchen
 
 discussion.bookmarkReferences = Bookmarks
 discussion.byGroup            = Zeige von {0} diskutierte Eintr\u00E4ge
@@ -1073,6 +1078,9 @@ person.new.newPersonButton             = Neue Person
 person.new.personPanelHeader           = \u00DCber diese Person
 person.new.postPanelHeader             = Ausgew\u00E4hlter Post
 person.new.subHeader                   = f\u00FCr Publikation
+person.show.B1st                       = Erstgutachter
+person.show.Bdtv                       = Doktor-Vater
+person.show.Maut                       = Autor
 person.show.Moth                       = Andere
 person.show.Mrev                       = Gutachter
 person.show.Mths                       = Betreuer
