--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -362,20 +362,25 @@ didyouknow = Did you know...
 didyouknow.browserButtons  = Our browser add-ons helps you to collect bookmarks and publications. <a href="/buttons">Read more.</a>
 didyouknow.editYourProfile = It's much easier for your colleagues to find you, if you've filled out your research profile. Additionally you are increasing your research impact in BibSonomy. <a href="/settings">Edit my profile.</a>
 
-disambiguation.addPersonButton           = Add person
-disambiguation.close                     = Close
-disambiguation.header                    = Disambiguation
-disambiguation.modalNewPersonCloseButton = Close
-disambiguation.modalNewPersonContent     = This action will redirect you to a new page prefilled with the current name where you can create a new person.
-disambiguation.modalNewPersonHeader      = Add new person to thesis
-disambiguation.modalSearchPersonHeader   = Add other person to thesis
-disambiguation.newPersonButton           = New person
-disambiguation.noFound                   = No persons found for author name
-disambiguation.otherPersonButton         = Other person
-disambiguation.person                    = Person
-disambiguation.personsPanelHeader        = Persons with the name
-disambiguation.postPanelHeader           = Related Post
-disambiguation.searchPersonButton        = Search other name
+disambiguation.addPersonButton            = Add person
+disambiguation.close                      = Close
+disambiguation.header                     = Disambiguation
+disambiguation.linkJustShowPerson         = Just show person
+disambiguation.linkPersonButton           = Add person
+disambiguation.modalLinkPersonCloseButton = Close
+disambiguation.modalLinkPersonContent     = Do you really want to assoziate the following person name with this publication?
+disambiguation.modalLinkPersonHeader      = Person name assoziation
+disambiguation.modalNewPersonCloseButton  = Close
+disambiguation.modalNewPersonContent      = This action will redirect you to a new page prefilled with the current name where you can create a new person.
+disambiguation.modalNewPersonHeader       = Add new person to thesis
+disambiguation.modalSearchPersonHeader    = Add other person to thesis
+disambiguation.newPersonButton            = New person
+disambiguation.noFound                    = No persons found for author name
+disambiguation.otherPersonButton          = Other person
+disambiguation.person                     = Person
+disambiguation.personsPanelHeader         = Persons with the name
+disambiguation.postPanelHeader            = Related Post
+disambiguation.searchPersonButton         = Search other name
 
 discussion.bookmarkReferences = Bookmarks
 discussion.byGroup            = show posts recently discussed by {0}
@@ -1096,6 +1101,9 @@ person.new.newPersonButton             = New person
 person.new.personPanelHeader           = About this person
 person.new.postPanelHeader             = Selected post
 person.new.subHeader                   = for post
+person.show.B1st                       = First reviewer
+person.show.Bdtv                       = Doctor-Vater
+person.show.Maut                       = Author
 person.show.Moth                       = Other
 person.show.Mrev                       = Reviewer
 person.show.Mths                       = Advisor
