--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1102,11 +1102,17 @@ person.new.personPanelHeader           = About this person
 person.new.postPanelHeader             = Selected post
 person.new.subHeader                   = for post
 person.show.B1st                       = First reviewer
+person.show.B1stTooltip                = First reviewer
 person.show.Bdtv                       = Doctor-Vater
+person.show.BdtvTooltip                = Doktor-Vater
 person.show.Maut                       = Author
+person.show.MautTooltip                = Author
 person.show.Moth                       = Other
+person.show.MothTooltip                = Other
 person.show.Mrev                       = Reviewer
+person.show.MrevTooltip                = Reviewer
 person.show.Mths                       = Advisor
+person.show.MthsTooltip                = Advisor
 person.show.academicDegree             = Academic degree
 person.show.addAlternateNameButton     = Add alternative name
 person.show.addNameButton              = Add name
