Adding a role to unkown person adds a new person

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1153,7 +1153,7 @@ person.show.personAlternateNamesSelect = (Select main name)
 person.show.personPanelHeader          = About
 person.show.resourcesPanelHeader       = Resources
 person.show.role                       = Role
-person.show.rolePubTab                 = Supervisor / Advisor / Reviewer / Other
+person.show.rolePubTab                 = Advision / Revision
 person.show.saveButton                 = Save
 person.show.supervisor                 = Supervisor
 person.show.thatsMeButton              = That's me
