--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1130,7 +1130,7 @@ person.show.personAlternateNamesSelect = (Hauptnamen ausw\u00E4hlen)
 person.show.personPanelHeader          = Infos
 person.show.resourcesPanelHeader       = Resourcen
 person.show.role                       = Rolle
-person.show.rolePubTab                 = Doktorvater/-mutter / Betreuer / Gutachter / Fremde Promotion / Habilitation
+person.show.rolePubTab                 = Betreuung / Gegutachtung
 person.show.saveButton                 = Speichern
 person.show.supervisor                 = Doktorvater
 person.show.thatsMeButton              = Das bin ich 
