RIS download link is modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TheLancetScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TheLancetScraperUnitURLTest.bib
@@ -1,11 +1,14 @@
-@article{shannon22global,
+@article{shannonglobal,
 abstract = {Female sex workers (FSWs) bear a disproportionately large burden of HIV infection worldwide. Despite decades of research and programme activity, the epidemiology of HIV and the role that structural determinants have in mitigating or potentiating HIV epidemics and access to care for FSWs is poorly understood. We reviewed available published data for HIV prevalence and incidence, condom use, and structural determinants among this group. Only 87 (43%) of 204 unique studies reviewed explicitly examined structural determinants of HIV. Most studies were from Asia, with few from areas with a heavy burden of HIV such as sub-Saharan Africa, Russia, and eastern Europe. To further explore the potential effect of structural determinants on the course of epidemics, we used a deterministic transmission model to simulate potential HIV infections averted through structural changes in regions with concentrated and generalised epidemics, and high HIV prevalence among FSWs. This modelling suggested that elimination of sexual violence alone could avert 17% of HIV infections in Kenya (95% uncertainty interval [UI] 1?31) and 20% in Canada (95% UI 3?39) through its immediate and sustained effect on non-condom use) among FSWs and their clients in the next decade. In Kenya, scaling up of access to antiretroviral therapy among FSWs and their clients to meet WHO eligibility of a CD4 cell count of less than 500 cells per ?L could avert 34% (95% UI 25?42) of infections and even modest coverage of sex worker-led outreach could avert 20% (95% UI 8?36) of infections in the next decade. Decriminalisation of sex work would have the greatest effect on the course of HIV epidemics across all settings, averting 33?46% of HIV infections in the next decade. Multipronged structural and community-led interventions are crucial to increase access to prevention and treatment and to promote human rights for FSWs worldwide.},
 author = {Shannon, Kate and Strathdee, Steffanie A and Goldenberg, Shira M and Duff, Putu and Mwangi, Peninah and Rusakova, Maia and Reza-Paul, Sushena and Lau, Joseph and Deering, Kathleen and Pickles, Michael R and Boily, Marie-Claude},
-issn = {01406736},
+booktitle = {The Lancet},
+comment = {doi: 10.1016/S0140-6736(14)60931-4},
+doi = {10.1016/S0140-6736(14)60931-4},
 journal = {The Lancet},
-month = {jul},
-refid = {S0140-6736(14)60931-4},
+number = {9962},
+pages = {55--71},
+publisher = {Elsevier},
 title = {Global epidemiology of HIV among female sex workers: influence of structural determinants},
-url = {http://linkinghub.elsevier.com/retrieve/pii/S0140673614609314},
-year = {22}
+url = {http://www.thelancet.com/journals/lancet/article/PIIS0140-6736(14)60931-4/abstract},
+volume = {385}
 }
